# workshops

./: .gitignore  klein_base_lora_workshop.ipynb  lora_finetuning_mechanics.ipynb  lora_workshop_advanced.ipynb  lora_workshop_final.ipynb  lora_workshop_intuitive.ipynb  pyproject.toml  workshop.ipynb
lora_training/: README.md  generate_comparisons.py  generate_configs.py  run_all_training.sh  setup_runpod.sh  train_all.py
lora_training/configs/: filmlut_r16_s1000.yaml  filmlut_r16_s250.yaml  filmlut_r16_s500.yaml  filmlut_r32_s1000.yaml  filmlut_r32_s250.yaml  filmlut_r32_s500.yaml  filmlut_r32_s500_klein.yaml  filmlut_r64_s1000.yaml  filmlut_r64_s250.yaml  filmlut_r64_s500.yaml  filmlut_r8_s1000.yaml  filmlut_r8_s250.yaml  filmlut_r8_s500.yaml
training_dataset/dataset/: dataset_3.txt
