[project]
name = "flux-workshops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.36.0",
    "fal-client>=0.11.0",
    "jupyterlab>=4.5.2",
    "matplotlib>=3.10.8",
    "pillow>=12.1.0",
    "protobuf>=6.33.4",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "transformers>=4.57.6",
]
